perf summary